Fix add item overlay z-index issue

--- a/src/styles/_app.sass
+++ b/src/styles/_app.sass
@@ -335,6 +335,7 @@ $item_footer_button_height: 32px
   height: 100%
   overflow-y: scroll
   padding: $default_padding_amount
+  z-index: 3
 
   animation-duration: 0.4s
   animation-name: slidein-up
